dropdown lang btn fixed on mobile

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -103,7 +103,8 @@
   transition: border-radius 300ms ease;
   z-index: 99;
 
-  &:hover {
+  &:hover,
+  &.open {
     border-radius: 20px 20px 0 0;
   }
 
@@ -136,13 +137,17 @@
     }
   }
 
-  &:hover .lang-btn__list {
+  &:hover .lang-btn__list,
+  &.open .lang-btn__list{
     transform: translateY(0);
     opacity: 1;
+    z-index: 1;
+    visibility: visible;
     transition: transform 300ms, opacity 300ms ease 100ms;
   }
 
-  &:hover .lang-btn__selected {
+  &:hover .lang-btn__selected,
+  &.open .lang-btn__selected{
     &::after, &::before {
       transform: rotate(0);
     }
@@ -150,6 +155,7 @@
 
   &__list {
     position: absolute;
+    visibility: hidden;
     top: 100%;
     left: 0;
     width: 100%;
@@ -159,6 +165,7 @@
     transform: translateY(-100%);
     opacity: 0;
     border: 1px solid $gray;
+    z-index: -2;
     background-color: $tertiary;
 
     li {
