--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -40,6 +40,7 @@
     @include mobile {
       flex-wrap: wrap-reverse;
       flex: 100%;
+      justify-content: center;
     }
   }
 
